Git ignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 movieapp-master/movieapp-api/.idea/compiler.xml
+movieapp-master/movieapp-api/.idea/compiler.xml
 movieapp-master/movieapp-api/.idea/encodings.xml
 movieapp-master/movieapp-api/.idea/jarRepositories.xml
 movieapp-master/movieapp-api/.idea/misc.xml
